--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>News and shop</title>
+    <title>Rainbow six siege</title>
     <link rel="stylesheet" href="style1.css"
 </head>
 <body>
     <!-- Шапка страницы -->
     <header>
         <!-- Логотип -->
-        <h1>Логотип сайта</h1>
+        <h1>Rainbow six siege WIKI</h1>
         <!-- Навигация -->
         <nav>
             <a href="#">Главная</a>
@@ -20,26 +20,42 @@
     <!-- Основная часть -->
     <main>
         <!-- Статья -->
-        <article>
             <!-- Заголовок 2 уровня -->
-            <h2>
-                Точки 
-            </h2>
+            <h1>
+                Rainbow six siege = Оперативники группы GSG9:
+            </h1>
             <!-- Картинка -->
-            ,<p>
-                точка точка точка
-            </p>
-            ,<P>
-                Марьям ты чмо
+            <article>
+                <h2>Bandit:</h2>
+            <img src="https://static.wikia.nocookie.net/rainbowsix/images/6/6a/Bandit_Portrait.png/revision/latest?cb=20190427212802&path-prefix=ru" width="550px">
+
+            <P>
+                Оперативник bandit играет в защите.Он умеет способность ставить акамулятор который ставится на все железное а также у него максимальная скорость что позволяет ему быстро бегать по карте и у него к снаняжению дается: Колючая проволка, C4, дробовик и ПП. С дробовиком у оперативника есть преимущество 
             </P>
+        </article>
+        <article>
+                <h2>Blitz:</h2>
+            <img src="https://static.wikia.nocookie.net/rainbowsix/images/2/2c/Blitz_Portrait.png/revision/latest?cb=20190427212803&path-prefix=ru" width="550px">
+            <p>
+                Оперативник blitz играет в нападении.Он имеет щит который ослепляет игроков что позволяет ему в короткое время убить своего врага. В его снаряжение входят:Баллистический щит, Б52,P12.
+            </p>
+        </article>
+        <article>
+            <h2>IQ</h2>
+            <img src="https://static.wikia.nocookie.net/rainbowsix/images/f/f1/IQ_Portrait.png/revision/latest?cb=20190427212815&path-prefix=ru" width="550px">
+        <p>
+
+        </p>
+        </article>
+        <article>
+            <h2>Jager</h2>
+            <img src="https://static.wikia.nocookie.net/rainbowsix/images/7/75/J%C3%A4ger_Portrait.png/revision/latest?cb=20190427212819&path-prefix=ru" width="550px">
         </article>
         
     </main>
     <!-- Подвал страницы -->
     <footer>
-        <p>
-            Этот сайт создан 28.03.2021
-        </p>
+            <h1>Этот сайт создан 28.03.2021</h1>
         <a href="https://vk.com/vanoo12">Мой вк </a>
     </footer>
 </body>
